add all partners to seeing field

--- a/views/index.pug
+++ b/views/index.pug
@@ -32,8 +32,33 @@ html(lang="en")
         label(for="Here to see") Seeing
         select#company(name="Source__c" required)
           option(value="") -- Please who you are here to see --
-          option(value="MCR") MCR
-          option(value="Richard") Richard
-          option(value="Steve") Steve
+          option(value="Engage Works") Engage Works
+          option(value="NETGEAR") NETGEAR
+          option(value="ZeeVee") ZeeVee
+          option(value="Mersive") Mersive
+          option(value="Holotronics") Holotronics
+          option(value="Interactive Scape") Interactive Scape
+          option(value="AVER") AVER
+          option(value="Ultra Leap") Ultra Leap
+          option(value="Quividi Bluesight Systems") Quividi Bluesight Systems
+          option(value="Bosk") Bosk
+          option(value="7th Sense") 7th Sense
+          option(value="Visualise") Visualise
+          option(value="Media Powerhouse") Media Powerhouse
+          option(value="eyeora") eyeora
+          option(value="Philips") Philips
+          option(value="Vive HTC") Vive HTC
+          option(value="NSYNK") NSYNK
+          option(value="InfiLED") InfiLED
+          option(value="CJP") CJP
+          option(value="Mo-Sys") Mo-Sys
+          option(value="Kimatica") Kimatica
+          option(value="Snapmatic") Snapmatic
+          option(value="Magik Door") Magik Door
+          option(value="Volta") Volta
+          option(value="Novalia") Novalia
+          option(value="Geenee") Geenee
+          option(value="Neutral Digital") Neutral Digital
+          option(value="Kampus") Kampus
 
         button(type="submit") Submit
