--- a/views/index.pug
+++ b/views/index.pug
@@ -33,7 +33,7 @@ html(lang="en")
 
         label(for="Here to see") Seeing
         select#company(name="Source__c" required)
-          option(value="") -- Please who you are here to see --
+          option(value="") -- Who are you here to see --
           option(value="7th Sense") 7th Sense
           option(value="AVER") AVER
           option(value="Bosk") Bosk
