added more names

--- a/views/index.pug
+++ b/views/index.pug
@@ -35,6 +35,12 @@ html(lang="en")
         select#company(name="Source__c" required)
           option(value="") -- Who are you here to see --
           option(value="Engage Works") Engage Works
+          option(value="EW - Alexander McCuaig") EW - Alexander McCuaig
+          option(value="EW - Fiona Humphreys") EW - Fiona Humphreys
+          option(value="EW - Richard Ward") EW - Richard Ward
+          option(value="EW - Steve Blyth") EW - Steve Blyth
+          option(value="EW - Other") EW - Other
+
           option(value="7th Sense") 7th Sense
           option(value="AVER") AVER
           option(value="Bosk") Bosk
