Add future foundary

--- a/views/index.pug
+++ b/views/index.pug
@@ -45,6 +45,8 @@ html(lang="en")
           option(value="AVER") AVER
           option(value="Bosk") Bosk
           option(value="CJP") CJP
+          option(value="Forever Foundry") Forever Foundry
+
           //- option(value="Geenee") Geenee
           option(value="Holotronics") Holotronics
           option(value="InfiLED") InfiLED
