--- a/views/index.pug
+++ b/views/index.pug
@@ -71,4 +71,8 @@ html(lang="en")
           option(value="ZeeVee") ZeeVee
           option(value="eyeora") eyeora
 
+        label(for="Previously_Visited_Flux__c") Have you visited Flux before? 
+          input(type='checkbox' name='Previously_Visited_Flux__c' required)
+      
+
         button(type="submit") Submit
