--- a/views/index.pug
+++ b/views/index.pug
@@ -73,7 +73,7 @@ html(lang="en")
           option(value="eyeora") eyeora
 
         label(for="Previously_Visited_Flux__c") Have you visited Flux before? 
-          input(type='checkbox' name='Previously_Visited_Flux__c' required)
+          input(type='checkbox' name='Previously_Visited_Flux__c')
       
 
         button(type="submit") Submit
