--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -48,8 +48,12 @@ body {
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
   only screen and (min--moz-device-pixel-ratio: 1.5),
   only screen and (-o-min-device-pixel-ratio: 3/2),
-  only screen and (min-device-pixel-ratio: 1.5) {
-  /* Add your high DPI rules here. Usually it's background or icon images that need to be updated */
+  only screen and (min-device-pixel-ratio: 1.5),
+  only screen and (min-resolution: 1.5dppx) {
+  body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
 }
 
 /* Flex layout for the form with direction column so it stacks vertically */
